<?xml version="1.0"?>
<package>
  <name>pythonwifi</name>
  <version>0.5.1</version>
  <description>
    The pythonwifi package is available through pypy, but not through a 
    deb package. This is copy of the package suitable for use through the
    ROS ecosystem.
  </description>

  <maintainer email="piyushk@todo.todo">piyushk</maintainer>
  <license>GPLv2</license>
  <url type="website">http://ros.org/wiki/pythonwifi</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>

  <author>Róman Joost</author>
  <author email="seankrobinson@gmail.com">Sean Robinson</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
