<package>
  <name>redis</name>
  <version>0.5.5</version>
  <description>
    The python redis client has a minor issue - it hangs on ctrl-c.
     This is a locally patched version that we can use directly until it
     is patched upstream.

     https://github.com/robotics-in-concert/rocon_multimaster/issues/30

     Note - this package has to be named 'redis' so we can conveniently
     import as if we were using the python-redis package.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/redis</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
