<package>
  <name>rocon_gateway</name>
  <version>0.7.10</version>
  <description>
    A hub acts as a shared key-value store for multiple ros 
    systems (primarily used by gateways).
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_gateway</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>
  <author email="piyushk@gmail.com">Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <run_depend>gateway_msgs</run_depend>
  <run_depend>python-crypto</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_hub_client</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_python_redis</run_depend>
  <run_depend>rocon_gateway_utils</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>rocon_python_wifi</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>zeroconf_msgs</run_depend>
  <!-- 
    This is kinda bad, as it forces a dependency on ubuntu, but we're not
    scaling up any other way yet, so this is convenient. 
  -->
  <run_depend>zeroconf_avahi</run_depend> 
  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
