##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(rocon_gateway_tests)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED rocon_test)
catkin_package()

catkin_python_setup()

##############################################################################
# Tests
##############################################################################

add_rocon_test(test/multimaster/graph.test)