<package>
  <name>rocon_gateway_tests</name>
  <version>0.5.2</version>
  <description>
    Testing programs for gateways.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_gateway_tests</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>
  <author email="piyushk@gmail.com">Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rocon_test</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rocon_gateway</run_depend>
  <run_depend>rocon_hub</run_depend>
  <run_depend>rocon_test</run_depend>
  <run_depend>roscpp_tutorials</run_depend>
  <run_depend>rospy_tutorials</run_depend>
  <!-- Not yet catkinized, just avoid it for now. -->
  <!-- <run_depend>actionlib_tutorials</run_depend> -->
  <run_depend>gateway_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
