<package>
  <name>rocon_gateway_tests</name>
  <version>0.7.10</version>
  <description>
    Testing programs for gateways.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_gateway_tests</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author>Daniel Stonier</author>
  <author>Jihoon Lee</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rocon_test</build_depend>

  <test_depend>rosunit</test_depend> <!-- for nosetests -->

  <!-- these need to get converted to test_depends -->
  <test_depend>rospy</test_depend>
  <test_depend>rocon_console</test_depend>
  <test_depend>rocon_hub</test_depend>
  <test_depend>gateway_msgs</test_depend>
  <test_depend>rocon_gateway_utils</test_depend>
  <test_depend>rocon_gateway</test_depend>
  <test_depend>roscpp_tutorials</test_depend>
  <test_depend>rospy_tutorials</test_depend>
  <test_depend>actionlib_tutorials</test_depend>
  <test_depend>zeroconf_avahi</test_depend>
</package>
