##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(rocon_gateway_utils)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED)
catkin_package()

catkin_python_setup()

##############################################################################
# Tests
##############################################################################

if (CATKIN_ENABLE_TESTING)
  find_package(catkin REQUIRED COMPONENTS rosunit rostest)
  add_subdirectory(tests)
endif()

##############################################################################
# Installs
##############################################################################
