<package>
  <name>rocon_gateway_utils</name>
  <version>0.7.10</version>
  <description>
    Utilities for gateway users (avoids large dependency requirements).
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_gateway_utils</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rosgraph</run_depend>
  <run_depend>gateway_msgs</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rosservice</run_depend>
  
  <!-- testing only -->
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>

</package>
