<package>
  <name>rocon_hub_client</name>
  <version>0.7.10</version>
  <description>
    Client api for discovery and connection to rocon hubs. It also has
    a few convenience api for manipulating data on the hub. 
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_hub_client</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gateway_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rocon_python_redis</run_depend>
  <run_depend>rocon_gateway_utils</run_depend>
</package>
