<?xml version="1.0"?>
<package>
  <name>rocon_multimaster</name>
  <version>0.7.10</version>
  <description>
    This doesn't do everything you need for multimaster, however it does
    provide the building blocks common to most or all multimaster systems.
    In particular, it provides the gateway model, which is an upgrade on
    old foreign_relay and master_sync concepts.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_multimaster</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author>Daniel Stonier</author>
  <author>Jihoon Lee</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rocon_gateway</run_depend>
  <run_depend>rocon_gateway_tests</run_depend>
  <run_depend>rocon_gateway_utils</run_depend>
  <run_depend>rocon_hub</run_depend>
  <run_depend>rocon_hub_client</run_depend>
  <run_depend>rocon_test</run_depend>
  <run_depend>rocon_unreliable_experiments</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>

