##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(rocon_utilities)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED)
catkin_package()

catkin_python_setup()

##############################################################################
# Tests
##############################################################################

#add_rostest(test/rosparam.test)

catkin_add_nosetests(test)

##############################################################################
# Installs
##############################################################################

install(PROGRAMS scripts/example_slave_api
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
    )