<package>
  <name>rocon_test</name>
  <version>0.7.10</version>
  <description>
    Rocon test framework (i.e. multi-launch rostest framework).
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_test</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>rosunit</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>rocon_launch</run_depend>
</package>
