<package>
  <name>rocon_utilities</name>
  <version>0.5.5</version>
  <description>
    Utility python code for rocon packages.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_utilities</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  
  <!-- For Tests, could move tests out, but this is not a big overhead -->
  <build_depend>rostest</build_depend>
  <run_depend>rosbash</run_depend>
  <run_depend>rosunit</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
