<package>
  <name>rocon_utilities</name>
  <version>0.6.1</version>
  <description>
    Utility python code for rocon packages.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_utilities</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_multimaster</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_multimaster/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  
  <run_depend>rosbash</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_comms</run_depend>

  <build_depend>rostest</build_depend> <!-- testing only -->
  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
